# public/documents/openapi.yml
@@ -171,24 +171,6 @@ paths:
         - bearerAuth: []
       responses:
         '200':
-          description: A success response with a user.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '400':
-          description: A bad request
-        '401':
-          description: Not Authorization
-        '404':
-          description: Not found User
-  /user_profile:
-    get:
-      operationId: getUserProfile
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
           description: A success response with the latest user profile.
           content:
             application/json:
@@ -221,6 +203,32 @@ paths:
           description: A bad request
         '401':
           description: Not Authorization
+  /user_profile/{user_id}:
+    get:
+      operationId: getUserProfile
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+          description: User id.
+      responses:
+        '200':
+          description: A success response with the latest user profile.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserProfile'
+        '400':
+          description: A bad request
+        '401':
+          description: Not Authorization
+        '404':
+          description: Not found User Profile
   /images/upload_url:
     post:
       operationId: createImageUploadURL
@@ -394,10 +402,10 @@ components:
         name:
           type: string
           description: User profile name.
-        imageID:
+        imageURL:
           type: string
-          format: uuid
-          description: Image id for the profile image.
+          format: uri
+          description: Image URL for the profile image.
         createdAt:
           type: number
           format: double
